// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LPPPool arbitrage tests protocol fee = 0; passive liquidity of 0.010000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "9.9999",
  "arbBalanceDelta1": "-0.0098895",
  "backrun": Object {
    "delta0": "-9.9999",
    "delta1": "0.0098895",
    "executionPrice": "0.00098896",
  },
  "finalPrice": "0.98000",
  "profit": Object {
    "final": "9.7900",
  },
}
`;

exports[`LPPPool arbitrage tests protocol fee = 0; passive liquidity of 0.010000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-0.0099900",
  "executionPrice": "0.00099900",
  "priceAfter": "0.00000099800",
}
`;

exports[`LPPPool arbitrage tests protocol fee = 0; passive liquidity of 0.010000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "9.9999",
  "arbBalanceDelta1": "-0.0098885",
  "backrun": Object {
    "delta0": "-0.30630",
    "delta1": "0.0095834",
    "executionPrice": "0.031288",
  },
  "burn": Object {
    "amount0": "10.000",
    "amount1": "3.0301e+8",
  },
  "collect": Object {
    "amount0": "0.00000000000035464",
    "amount1": "0.0000",
  },
  "finalPrice": "0.98000",
  "frontrun": Object {
    "delta0": "0.30640",
    "delta1": "-0.0096839",
    "executionPrice": "0.031605",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "3.0301e+8",
  },
  "profit": Object {
    "afterFrontrun": "-0.29059",
    "afterSandwich": "9.4994",
    "final": "9.7900",
  },
  "sandwichedPrice": "0.00099890",
}
`;

exports[`LPPPool arbitrage tests protocol fee = 0; passive liquidity of 0.010000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "10.000",
  "arbBalanceDelta1": "-0.010040",
  "backrun": Object {
    "delta0": "-10.000",
    "delta1": "0.010040",
    "executionPrice": "0.0010040",
  },
  "finalPrice": "1.0100",
  "profit": Object {
    "final": "10.090",
  },
}
`;

exports[`LPPPool arbitrage tests protocol fee = 0; passive liquidity of 0.010000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-0.0099900",
  "executionPrice": "0.00099900",
  "priceAfter": "0.00000099800",
}
`;

exports[`LPPPool arbitrage tests protocol fee = 0; passive liquidity of 0.010000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "10.000",
  "arbBalanceDelta1": "-0.010039",
  "backrun": Object {
    "delta0": "-0.30645",
    "delta1": "0.0097338",
    "executionPrice": "0.031763",
  },
  "burn": Object {
    "amount0": "10.000",
    "amount1": "3.0301e+8",
  },
  "collect": Object {
    "amount0": "0.00000000000035464",
    "amount1": "0.0000",
  },
  "finalPrice": "1.0100",
  "frontrun": Object {
    "delta0": "0.30640",
    "delta1": "-0.0096839",
    "executionPrice": "0.031605",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "3.0301e+8",
  },
  "profit": Object {
    "afterFrontrun": "-0.29978",
    "afterSandwich": "9.7902",
    "final": "10.090",
  },
  "sandwichedPrice": "0.00099890",
}
`;

exports[`LPPPool arbitrage tests protocol fee = 0; passive liquidity of 1.0000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "9.9898",
  "arbBalanceDelta1": "-0.89904",
  "backrun": Object {
    "delta0": "-9.9898",
    "delta1": "0.89904",
    "executionPrice": "0.089995",
  },
  "finalPrice": "0.98000",
  "profit": Object {
    "final": "8.8910",
  },
}
`;

exports[`LPPPool arbitrage tests protocol fee = 0; passive liquidity of 1.0000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-0.90909",
  "executionPrice": "0.090909",
  "priceAfter": "0.0082645",
}
`;

exports[`LPPPool arbitrage tests protocol fee = 0; passive liquidity of 1.0000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "9.9898",
  "arbBalanceDelta1": "-0.89896",
  "backrun": Object {
    "delta0": "-2.3066",
    "delta1": "0.68845",
    "executionPrice": "0.29847",
  },
  "burn": Object {
    "amount0": "10.000",
    "amount1": "2.8905e+9",
  },
  "collect": Object {
    "amount0": "0.0000000000000090220",
    "amount1": "0.0000",
  },
  "finalPrice": "0.98000",
  "frontrun": Object {
    "delta0": "2.3168",
    "delta1": "-0.69850",
    "executionPrice": "0.30150",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "2.8905e+9",
  },
  "profit": Object {
    "afterFrontrun": "-1.5719",
    "afterSandwich": "7.3191",
    "final": "8.8911",
  },
  "sandwichedPrice": "0.090901",
}
`;

exports[`LPPPool arbitrage tests protocol fee = 0; passive liquidity of 1.0000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "10.005",
  "arbBalanceDelta1": "-0.91408",
  "backrun": Object {
    "delta0": "-10.005",
    "delta1": "0.91408",
    "executionPrice": "0.091363",
  },
  "finalPrice": "1.0100",
  "profit": Object {
    "final": "9.1909",
  },
}
`;

exports[`LPPPool arbitrage tests protocol fee = 0; passive liquidity of 1.0000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-0.90909",
  "executionPrice": "0.090909",
  "priceAfter": "0.0082645",
}
`;

exports[`LPPPool arbitrage tests protocol fee = 0; passive liquidity of 1.0000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "10.005",
  "arbBalanceDelta1": "-0.91400",
  "backrun": Object {
    "delta0": "-2.3217",
    "delta1": "0.70349",
    "executionPrice": "0.30300",
  },
  "burn": Object {
    "amount0": "10.000",
    "amount1": "2.8905e+9",
  },
  "collect": Object {
    "amount0": "0.0000000000000090220",
    "amount1": "0.0000",
  },
  "finalPrice": "1.0100",
  "frontrun": Object {
    "delta0": "2.3168",
    "delta1": "-0.69850",
    "executionPrice": "0.30150",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "2.8905e+9",
  },
  "profit": Object {
    "afterFrontrun": "-1.6414",
    "afterSandwich": "7.5496",
    "final": "9.1910",
  },
  "sandwichedPrice": "0.090901",
}
`;

exports[`LPPPool arbitrage tests protocol fee = 0; passive liquidity of 10.000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "9.8985",
  "arbBalanceDelta1": "-4.8995",
  "backrun": Object {
    "delta0": "-9.8985",
    "delta1": "4.8995",
    "executionPrice": "0.49497",
  },
  "finalPrice": "0.98000",
  "profit": Object {
    "final": "4.8010",
  },
}
`;

exports[`LPPPool arbitrage tests protocol fee = 0; passive liquidity of 10.000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-5.0000",
  "executionPrice": "0.50000",
  "priceAfter": "0.25000",
}
`;

exports[`LPPPool arbitrage tests protocol fee = 0; passive liquidity of 10.000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "9.8985",
  "arbBalanceDelta1": "-4.8994",
  "backrun": Object {
    "delta0": "-4.0407",
    "delta1": "2.8285",
    "executionPrice": "0.69999",
  },
  "burn": Object {
    "amount0": "10.000",
    "amount1": "6.7791e+9",
  },
  "collect": Object {
    "amount0": "0.0000000000000045460",
    "amount1": "0.0000",
  },
  "finalPrice": "0.98000",
  "frontrun": Object {
    "delta0": "4.1423",
    "delta1": "-2.9290",
    "executionPrice": "0.70710",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "6.7791e+9",
  },
  "profit": Object {
    "afterFrontrun": "-1.1304",
    "afterSandwich": "3.6697",
    "final": "4.8011",
  },
  "sandwichedPrice": "0.49999",
}
`;

exports[`LPPPool arbitrage tests protocol fee = 0; passive liquidity of 10.000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "10.050",
  "arbBalanceDelta1": "-5.0499",
  "backrun": Object {
    "delta0": "-10.050",
    "delta1": "5.0499",
    "executionPrice": "0.50249",
  },
  "finalPrice": "1.0100",
  "profit": Object {
    "final": "5.1002",
  },
}
`;

exports[`LPPPool arbitrage tests protocol fee = 0; passive liquidity of 10.000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-5.0000",
  "executionPrice": "0.50000",
  "priceAfter": "0.25000",
}
`;

exports[`LPPPool arbitrage tests protocol fee = 0; passive liquidity of 10.000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "10.050",
  "arbBalanceDelta1": "-5.0498",
  "backrun": Object {
    "delta0": "-4.1919",
    "delta1": "2.9789",
    "executionPrice": "0.71063",
  },
  "burn": Object {
    "amount0": "10.000",
    "amount1": "6.7791e+9",
  },
  "collect": Object {
    "amount0": "0.0000000000000045460",
    "amount1": "0.0000",
  },
  "finalPrice": "1.0100",
  "frontrun": Object {
    "delta0": "4.1423",
    "delta1": "-2.9290",
    "executionPrice": "0.70710",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "6.7791e+9",
  },
  "profit": Object {
    "afterFrontrun": "-1.2547",
    "afterSandwich": "3.8454",
    "final": "5.1003",
  },
  "sandwichedPrice": "0.49999",
}
`;

exports[`LPPPool arbitrage tests protocol fee = 0; passive liquidity of 100.00 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "8.9847",
  "arbBalanceDelta1": "-8.0859",
  "backrun": Object {
    "delta0": "-8.9847",
    "delta1": "8.0859",
    "executionPrice": "0.89995",
  },
  "finalPrice": "0.98000",
  "profit": Object {
    "final": "0.71919",
  },
}
`;

exports[`LPPPool arbitrage tests protocol fee = 0; passive liquidity of 100.00 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-9.0909",
  "executionPrice": "0.90909",
  "priceAfter": "0.82645",
}
`;

exports[`LPPPool arbitrage tests protocol fee = 0; passive liquidity of 100.00 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "8.9847",
  "arbBalanceDelta1": "-8.0851",
  "backrun": Object {
    "delta0": "-3.8701",
    "delta1": "3.6527",
    "executionPrice": "0.94384",
  },
  "burn": Object {
    "amount0": "10.000",
    "amount1": "9.1406e+9",
  },
  "collect": Object {
    "amount0": "0.0000000000000015030",
    "amount1": "0.0000",
  },
  "finalPrice": "0.98000",
  "frontrun": Object {
    "delta0": "4.8853",
    "delta1": "-4.6578",
    "executionPrice": "0.95342",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "9.1406e+9",
  },
  "profit": Object {
    "afterFrontrun": "-0.12984",
    "afterSandwich": "0.58002",
    "final": "0.71997",
  },
  "sandwichedPrice": "0.90901",
}
`;

exports[`LPPPool arbitrage tests protocol fee = 0; passive liquidity of 100.00 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "10.496",
  "arbBalanceDelta1": "-9.5897",
  "backrun": Object {
    "delta0": "-10.496",
    "delta1": "9.5897",
    "executionPrice": "0.91363",
  },
  "finalPrice": "1.0100",
  "profit": Object {
    "final": "1.0116",
  },
}
`;

exports[`LPPPool arbitrage tests protocol fee = 0; passive liquidity of 100.00 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-9.0909",
  "executionPrice": "0.90909",
  "priceAfter": "0.82645",
}
`;

exports[`LPPPool arbitrage tests protocol fee = 0; passive liquidity of 100.00 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "10.496",
  "arbBalanceDelta1": "-9.5889",
  "backrun": Object {
    "delta0": "-5.3816",
    "delta1": "5.1566",
    "executionPrice": "0.95818",
  },
  "burn": Object {
    "amount0": "10.000",
    "amount1": "9.1406e+9",
  },
  "collect": Object {
    "amount0": "0.0000000000000015030",
    "amount1": "0.0000",
  },
  "finalPrice": "1.0100",
  "frontrun": Object {
    "delta0": "4.8853",
    "delta1": "-4.6578",
    "executionPrice": "0.95342",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "9.1406e+9",
  },
  "profit": Object {
    "afterFrontrun": "-0.27640",
    "afterSandwich": "0.73346",
    "final": "1.0124",
  },
  "sandwichedPrice": "0.90901",
}
`;

exports[`LPPPool arbitrage tests protocol fee = 6; passive liquidity of 0.010000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "9.9999",
  "arbBalanceDelta1": "-0.0098895",
  "backrun": Object {
    "delta0": "-9.9999",
    "delta1": "0.0098895",
    "executionPrice": "0.00098896",
  },
  "finalPrice": "0.98000",
  "profit": Object {
    "final": "9.7900",
  },
}
`;

exports[`LPPPool arbitrage tests protocol fee = 6; passive liquidity of 0.010000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-0.0099900",
  "executionPrice": "0.00099900",
  "priceAfter": "0.00000099800",
}
`;

exports[`LPPPool arbitrage tests protocol fee = 6; passive liquidity of 0.010000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "9.9999",
  "arbBalanceDelta1": "-0.0098885",
  "backrun": Object {
    "delta0": "-0.30630",
    "delta1": "0.0095834",
    "executionPrice": "0.031288",
  },
  "burn": Object {
    "amount0": "10.000",
    "amount1": "3.0301e+8",
  },
  "collect": Object {
    "amount0": "0.00000000000029554",
    "amount1": "0.0000",
  },
  "finalPrice": "0.98000",
  "frontrun": Object {
    "delta0": "0.30640",
    "delta1": "-0.0096839",
    "executionPrice": "0.031605",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "3.0301e+8",
  },
  "profit": Object {
    "afterFrontrun": "-0.29059",
    "afterSandwich": "9.4994",
    "final": "9.7900",
  },
  "sandwichedPrice": "0.00099890",
}
`;

exports[`LPPPool arbitrage tests protocol fee = 6; passive liquidity of 0.010000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "10.000",
  "arbBalanceDelta1": "-0.010040",
  "backrun": Object {
    "delta0": "-10.000",
    "delta1": "0.010040",
    "executionPrice": "0.0010040",
  },
  "finalPrice": "1.0100",
  "profit": Object {
    "final": "10.090",
  },
}
`;

exports[`LPPPool arbitrage tests protocol fee = 6; passive liquidity of 0.010000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-0.0099900",
  "executionPrice": "0.00099900",
  "priceAfter": "0.00000099800",
}
`;

exports[`LPPPool arbitrage tests protocol fee = 6; passive liquidity of 0.010000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "10.000",
  "arbBalanceDelta1": "-0.010039",
  "backrun": Object {
    "delta0": "-0.30645",
    "delta1": "0.0097338",
    "executionPrice": "0.031763",
  },
  "burn": Object {
    "amount0": "10.000",
    "amount1": "3.0301e+8",
  },
  "collect": Object {
    "amount0": "0.00000000000029554",
    "amount1": "0.0000",
  },
  "finalPrice": "1.0100",
  "frontrun": Object {
    "delta0": "0.30640",
    "delta1": "-0.0096839",
    "executionPrice": "0.031605",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "3.0301e+8",
  },
  "profit": Object {
    "afterFrontrun": "-0.29978",
    "afterSandwich": "9.7902",
    "final": "10.090",
  },
  "sandwichedPrice": "0.00099890",
}
`;

exports[`LPPPool arbitrage tests protocol fee = 6; passive liquidity of 1.0000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "9.9898",
  "arbBalanceDelta1": "-0.89904",
  "backrun": Object {
    "delta0": "-9.9898",
    "delta1": "0.89904",
    "executionPrice": "0.089995",
  },
  "finalPrice": "0.98000",
  "profit": Object {
    "final": "8.8910",
  },
}
`;

exports[`LPPPool arbitrage tests protocol fee = 6; passive liquidity of 1.0000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-0.90909",
  "executionPrice": "0.090909",
  "priceAfter": "0.0082645",
}
`;

exports[`LPPPool arbitrage tests protocol fee = 6; passive liquidity of 1.0000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "9.9898",
  "arbBalanceDelta1": "-0.89896",
  "backrun": Object {
    "delta0": "-2.3066",
    "delta1": "0.68845",
    "executionPrice": "0.29847",
  },
  "burn": Object {
    "amount0": "10.000",
    "amount1": "2.8905e+9",
  },
  "collect": Object {
    "amount0": "0.0000000000000075190",
    "amount1": "0.0000",
  },
  "finalPrice": "0.98000",
  "frontrun": Object {
    "delta0": "2.3168",
    "delta1": "-0.69850",
    "executionPrice": "0.30150",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "2.8905e+9",
  },
  "profit": Object {
    "afterFrontrun": "-1.5719",
    "afterSandwich": "7.3191",
    "final": "8.8911",
  },
  "sandwichedPrice": "0.090901",
}
`;

exports[`LPPPool arbitrage tests protocol fee = 6; passive liquidity of 1.0000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "10.005",
  "arbBalanceDelta1": "-0.91408",
  "backrun": Object {
    "delta0": "-10.005",
    "delta1": "0.91408",
    "executionPrice": "0.091363",
  },
  "finalPrice": "1.0100",
  "profit": Object {
    "final": "9.1909",
  },
}
`;

exports[`LPPPool arbitrage tests protocol fee = 6; passive liquidity of 1.0000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-0.90909",
  "executionPrice": "0.090909",
  "priceAfter": "0.0082645",
}
`;

exports[`LPPPool arbitrage tests protocol fee = 6; passive liquidity of 1.0000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "10.005",
  "arbBalanceDelta1": "-0.91400",
  "backrun": Object {
    "delta0": "-2.3217",
    "delta1": "0.70349",
    "executionPrice": "0.30300",
  },
  "burn": Object {
    "amount0": "10.000",
    "amount1": "2.8905e+9",
  },
  "collect": Object {
    "amount0": "0.0000000000000075190",
    "amount1": "0.0000",
  },
  "finalPrice": "1.0100",
  "frontrun": Object {
    "delta0": "2.3168",
    "delta1": "-0.69850",
    "executionPrice": "0.30150",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "2.8905e+9",
  },
  "profit": Object {
    "afterFrontrun": "-1.6414",
    "afterSandwich": "7.5496",
    "final": "9.1910",
  },
  "sandwichedPrice": "0.090901",
}
`;

exports[`LPPPool arbitrage tests protocol fee = 6; passive liquidity of 10.000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "9.8985",
  "arbBalanceDelta1": "-4.8995",
  "backrun": Object {
    "delta0": "-9.8985",
    "delta1": "4.8995",
    "executionPrice": "0.49497",
  },
  "finalPrice": "0.98000",
  "profit": Object {
    "final": "4.8010",
  },
}
`;

exports[`LPPPool arbitrage tests protocol fee = 6; passive liquidity of 10.000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-5.0000",
  "executionPrice": "0.50000",
  "priceAfter": "0.25000",
}
`;

exports[`LPPPool arbitrage tests protocol fee = 6; passive liquidity of 10.000 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "9.8985",
  "arbBalanceDelta1": "-4.8994",
  "backrun": Object {
    "delta0": "-4.0407",
    "delta1": "2.8285",
    "executionPrice": "0.69999",
  },
  "burn": Object {
    "amount0": "10.000",
    "amount1": "6.7791e+9",
  },
  "collect": Object {
    "amount0": "0.0000000000000037890",
    "amount1": "0.0000",
  },
  "finalPrice": "0.98000",
  "frontrun": Object {
    "delta0": "4.1423",
    "delta1": "-2.9290",
    "executionPrice": "0.70710",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "6.7791e+9",
  },
  "profit": Object {
    "afterFrontrun": "-1.1304",
    "afterSandwich": "3.6697",
    "final": "4.8011",
  },
  "sandwichedPrice": "0.49999",
}
`;

exports[`LPPPool arbitrage tests protocol fee = 6; passive liquidity of 10.000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "10.050",
  "arbBalanceDelta1": "-5.0499",
  "backrun": Object {
    "delta0": "-10.050",
    "delta1": "5.0499",
    "executionPrice": "0.50249",
  },
  "finalPrice": "1.0100",
  "profit": Object {
    "final": "5.1002",
  },
}
`;

exports[`LPPPool arbitrage tests protocol fee = 6; passive liquidity of 10.000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-5.0000",
  "executionPrice": "0.50000",
  "priceAfter": "0.25000",
}
`;

exports[`LPPPool arbitrage tests protocol fee = 6; passive liquidity of 10.000 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "10.050",
  "arbBalanceDelta1": "-5.0498",
  "backrun": Object {
    "delta0": "-4.1919",
    "delta1": "2.9789",
    "executionPrice": "0.71063",
  },
  "burn": Object {
    "amount0": "10.000",
    "amount1": "6.7791e+9",
  },
  "collect": Object {
    "amount0": "0.0000000000000037890",
    "amount1": "0.0000",
  },
  "finalPrice": "1.0100",
  "frontrun": Object {
    "delta0": "4.1423",
    "delta1": "-2.9290",
    "executionPrice": "0.70710",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "6.7791e+9",
  },
  "profit": Object {
    "afterFrontrun": "-1.2547",
    "afterSandwich": "3.8454",
    "final": "5.1003",
  },
  "sandwichedPrice": "0.49999",
}
`;

exports[`LPPPool arbitrage tests protocol fee = 6; passive liquidity of 100.00 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "8.9847",
  "arbBalanceDelta1": "-8.0859",
  "backrun": Object {
    "delta0": "-8.9847",
    "delta1": "8.0859",
    "executionPrice": "0.89995",
  },
  "finalPrice": "0.98000",
  "profit": Object {
    "final": "0.71919",
  },
}
`;

exports[`LPPPool arbitrage tests protocol fee = 6; passive liquidity of 100.00 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-9.0909",
  "executionPrice": "0.90909",
  "priceAfter": "0.82645",
}
`;

exports[`LPPPool arbitrage tests protocol fee = 6; passive liquidity of 100.00 exact input of 10e18 token0 with starting price of 1.0 and true price of 0.98 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "8.9847",
  "arbBalanceDelta1": "-8.0851",
  "backrun": Object {
    "delta0": "-3.8701",
    "delta1": "3.6527",
    "executionPrice": "0.94384",
  },
  "burn": Object {
    "amount0": "10.000",
    "amount1": "9.1406e+9",
  },
  "collect": Object {
    "amount0": "0.0000000000000012530",
    "amount1": "0.0000",
  },
  "finalPrice": "0.98000",
  "frontrun": Object {
    "delta0": "4.8853",
    "delta1": "-4.6578",
    "executionPrice": "0.95342",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "9.1406e+9",
  },
  "profit": Object {
    "afterFrontrun": "-0.12984",
    "afterSandwich": "0.58002",
    "final": "0.71997",
  },
  "sandwichedPrice": "0.90901",
}
`;

exports[`LPPPool arbitrage tests protocol fee = 6; passive liquidity of 100.00 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 backrun to true price after swap only 1`] = `
Object {
  "arbBalanceDelta0": "10.496",
  "arbBalanceDelta1": "-9.5897",
  "backrun": Object {
    "delta0": "-10.496",
    "delta1": "9.5897",
    "executionPrice": "0.91363",
  },
  "finalPrice": "1.0100",
  "profit": Object {
    "final": "1.0116",
  },
}
`;

exports[`LPPPool arbitrage tests protocol fee = 6; passive liquidity of 100.00 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 not sandwiched 1`] = `
Object {
  "amount0Delta": "10.000",
  "amount1Delta": "-9.0909",
  "executionPrice": "0.90909",
  "priceAfter": "0.82645",
}
`;

exports[`LPPPool arbitrage tests protocol fee = 6; passive liquidity of 100.00 exact input of 10e18 token0 with starting price of 1.0 and true price of 1.01 sandwiched with swap to execution price then mint max liquidity/target/burn max liquidity 1`] = `
Object {
  "arbBalanceDelta0": "10.496",
  "arbBalanceDelta1": "-9.5889",
  "backrun": Object {
    "delta0": "-5.3816",
    "delta1": "5.1566",
    "executionPrice": "0.95818",
  },
  "burn": Object {
    "amount0": "10.000",
    "amount1": "9.1406e+9",
  },
  "collect": Object {
    "amount0": "0.0000000000000012530",
    "amount1": "0.0000",
  },
  "finalPrice": "1.0100",
  "frontrun": Object {
    "delta0": "4.8853",
    "delta1": "-4.6578",
    "executionPrice": "0.95342",
  },
  "mint": Object {
    "amount0": "0.0000",
    "amount1": "9.1406e+9",
  },
  "profit": Object {
    "afterFrontrun": "-0.27640",
    "afterSandwich": "0.73346",
    "final": "1.0124",
  },
  "sandwichedPrice": "0.90901",
}
`;
